# PubMed_Devops

./: .gitignore  README.md
Pubmed/: file.csv  pubmed_cli.py  pyproject.toml  requirements.txt
Pubmed/experiments/: filtered_pubmed_results_5.csv  main.py  main2.py  main3.py  main4.py  pubmed_fetcher.py  pubmed_results.csv  pubmed_results_2.csv
Pubmed/scripts/: app.py  pubmed_results_5.csv  run.py  ui.py
